syntax = "proto3";

option java_multiple_files = true;

package com.grpc.server.service.calculator;

import "common/Status.proto";

message CalculatorRequest {
  int32 number = 1;
}

message SquareData {
  int32 result = 1;
}

message CalculatorResponse {
  common.Status status = 1;
  SquareData data = 2;
}

service CalculatorService {
  rpc calculateSquare(CalculatorRequest) returns (CalculatorResponse);
}
